syntax = "proto3";

package booking;


option go_package = "./;pb";

message RequestUpdateFlight {
    string id = 1;
    Flight flight = 2;
}

message RequestSearchFlight {
    string id = 1;
}

message Flight {
    string id = 1;
    string from = 2;
    string to = 3;
    string depart_date = 4;
    string depart_time = 5;
    string status = 6;
    int64 slot = 7;
    string flight_plane = 8;
}


